--- a/meteor/package.json
+++ b/meteor/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "meteor-node-stubs": "~0.2.4",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router": "^3.0.5"
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1"
   }
 }
