Added env variable and updated docs
Use of the env variable to start the app,
added this to a script in  package.json so that when
meteor npm start is executed this env variable is
loaded automatically. Env variable related to the
external MongoDB. Updated documentation accordingly.

--- a/meteor/package.json
+++ b/meteor/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ipsilum",
+  "name": "dO2s",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+      "start": "env MONGO_URL=mongodb://localhost:27017/do2sdb meteor run"
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
