--- a/meteor/package.json
+++ b/meteor/package.json
@@ -11,9 +11,13 @@
     "meteor-node-stubs": "~0.2.4",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-addons-pure-render-mixin": "^15.5.2",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-komposer": "^2.0.0",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-bootstrap": "^0.24.2",
+    "react-router-dom": "^4.1.1",
+    "simpl-schema": "^0.3.0"
   }
 }
