--- a/meteor/package.json
+++ b/meteor/package.json
@@ -2,6 +2,7 @@
   "name": "dO2s",
   "private": true,
   "scripts": {
+    "db": "mongod --dbpath ~/myGitprojects/data/db",
     "start": "env MONGO_URL=mongodb://localhost:27017/do2sdb meteor run"
   },
   "dependencies": {
