--- a/meteor/package.json
+++ b/meteor/package.json
@@ -20,5 +20,18 @@
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
     "simpl-schema": "^0.3.0"
+  },
+  "devDependencies": {
+    "babel-jest": "^20.0.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^2.9.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-meteor": "^4.0.1",
+    "eslint-plugin-react": "^7.1.0",
+    "jest": "^20.0.4"
   }
 }
