--- a/meteor/package.json
+++ b/meteor/package.json
@@ -11,15 +11,15 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "jquery-validation": "^1.16.0",
-    "meteor-node-stubs": "~0.2.4",
+    "meteor-node-stubs": "^0.2.11",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.5.4",
-    "react-router": "^4.1.1",
+    "react": "^15.6.1",
+    "react-bootstrap": "^0.31.1",
+    "react-dom": "^15.6.1",
+    "react-router": "^4.1.2",
     "react-router-bootstrap": "^0.24.2",
-    "react-router-dom": "^4.1.1",
-    "simpl-schema": "^0.3.0"
+    "react-router-dom": "^4.1.2",
+    "simpl-schema": "^0.3.1"
   },
   "devDependencies": {
     "babel-jest": "^20.0.3",
@@ -27,7 +27,7 @@
     "babel-preset-react": "^6.24.1",
     "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.2",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-meteor": "^4.0.1",
