--- a/meteor/package.json
+++ b/meteor/package.json
@@ -6,9 +6,11 @@
     "start": "env MONGO_URL=mongodb://localhost:27017/do2sdb meteor --settings settings-development.json"
   },
   "dependencies": {
+    "@cleverbeagle/dates": "^0.5.1",
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
     "bootstrap": "^3.3.7",
+    "commonmark": "^0.27.0",
     "jquery": "^3.2.1",
     "jquery-validation": "^1.16.0",
     "meteor-node-stubs": "^0.2.11",
