--- a/meteor/package.json
+++ b/meteor/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@cleverbeagle/dates": "^0.5.1",
+    "@cleverbeagle/seeder": "^1.1.3",
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
     "bootstrap": "^3.3.7",
