--- a/meteor/package.json
+++ b/meteor/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "db": "mongod --dbpath ~/myGitprojects/data/db",
-    "start": "env MONGO_URL=mongodb://localhost:27017/do2sdb meteor --settings settings-development.json",
+    "start": "meteor --settings settings-development.json",
     "demo": "env MONGO_URL=mongodb://localhost:27017/do2sdb meteor --settings settings-demo.json"
   },
   "dependencies": {
