--- a/meteor/package.json
+++ b/meteor/package.json
@@ -15,6 +15,7 @@
     "commonmark": "^0.27.0",
     "jquery": "^3.2.1",
     "jquery-validation": "^1.16.0",
+    "leaflet": "^1.2.0",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "^0.2.11",
     "prop-types": "^15.5.10",
