--- a/meteor/package.json
+++ b/meteor/package.json
@@ -8,36 +8,37 @@
   },
   "dependencies": {
     "@cleverbeagle/dates": "^0.5.1",
-    "@cleverbeagle/seeder": "^1.1.3",
-    "babel-runtime": "^6.20.0",
-    "bcrypt": "^1.0.2",
+    "@cleverbeagle/seeder": "^1.2.0",
+    "babel-runtime": "^6.26.0",
+    "bcrypt": "^1.0.3",
     "bootstrap": "^3.3.7",
-    "commonmark": "^0.27.0",
+    "commonmark": "^0.28.1",
     "jquery": "^3.2.1",
-    "jquery-validation": "^1.16.0",
+    "jquery-validation": "^1.17.0",
     "leaflet": "^1.2.0",
+    "loadash": "^1.0.0",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "^0.2.11",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.1",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
-    "react-router": "^4.1.2",
+    "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.2",
-    "react-router-dom": "^4.1.2",
-    "simpl-schema": "^0.3.1"
+    "react-router-dom": "^4.2.2",
+    "simpl-schema": "^0.3.2"
   },
   "devDependencies": {
     "babel-jest": "^20.0.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^2.9.1",
-    "eslint": "^3.19.0",
+    "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-meteor": "^4.1.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-meteor": "^4.1.4",
+    "eslint-plugin-react": "^7.3.0",
     "jest": "^20.0.4"
   }
 }
