--- a/meteor/package.json
+++ b/meteor/package.json
@@ -19,6 +19,7 @@
     "jquery-validation": "^1.17.0",
     "juice": "^4.1.1",
     "leaflet": "^1.2.0",
+    "leaflet-draw": "^0.4.12",
     "loadash": "^1.0.0",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "^0.2.11",
