--- a/meteor/package.json
+++ b/meteor/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "babel-jest": "^20.0.3",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^2.9.1",
     "eslint": "^4.6.0",
