:art: Add exception to href rule
This allows the react-router-dom Link to have no href

--- a/meteor/.eslintrc.json
+++ b/meteor/.eslintrc.json
@@ -40,6 +40,15 @@
       ],
       "class-methods-use-this": 0,
       "react/jsx-filename-extension": 0,
-      "react/forbid-prop-types": 0
+      "react/forbid-prop-types": 0,
+      "jsx-a11y/anchor-is-valid": [
+        "error",
+        {
+          "components": [ "Link" ],
+          "specialLink": [ "hrefLeft", "hrefRight", "to" ],
+          "aspects": [ "noHref", "invalidHref", "preferButton" ]
+        }
+      ]
     }
+
 }
