--- a/meteor/package.json
+++ b/meteor/package.json
@@ -14,6 +14,9 @@
     "bcrypt": "^1.0.3",
     "bootstrap": "^3.3.7",
     "commonmark": "^0.28.1",
+    "d3": "^4.10.2",
+    "d3-timeline-chart": "^1.3.0",
+    "event-drops": "^0.3.1-alpha4",
     "handlebars": "^4.0.10",
     "jquery": "^3.2.1",
     "jquery-validation": "^1.17.0",
