:star: Create and delete directory associated with mission

--- a/meteor/settings-development.json
+++ b/meteor/settings-development.json
@@ -15,6 +15,9 @@
         },
         "env": {
             "MAIL_URL": ""
+        },
+        "config": {
+          "missionsPath": "/Users/pilibastidas/myGitProjects/pruebas-servidor-do2s"
         }
     }
 }
