--- a/meteor/package.json
+++ b/meteor/package.json
@@ -17,6 +17,7 @@
     "commonmark": "^0.28.1",
     "core-js": "^2.5.1",
     "d3": "^4.11.0",
+    "faker": "^4.1.0",
     "handlebars": "^4.0.11",
     "jquery": "^3.2.1",
     "jquery-validation": "^1.17.0",
