--- a/meteor/package.json
+++ b/meteor/package.json
@@ -11,7 +11,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@cleverbeagle/dates": "^0.5.1",
     "@cleverbeagle/seeder": "^1.3.1",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
@@ -28,6 +27,8 @@
     "leaflet-draw": "0.4.12",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "^0.3.2",
+    "moment": "^2.19.2",
+    "moment-timezone": "^0.5.14",
     "prop-types": "^15.5.10",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
